[gd_scene load_steps=21 format=3 uid="uid://bgu2qc17itoa1"]

[ext_resource type="Script" uid="uid://dv0i2xlgfxs1x" path="res://src/Assets/kitchen-assets/salt.gd" id="1_0igua"]
[ext_resource type="PackedScene" uid="uid://c25yxb0vt53vc" path="res://addons/godot-xr-tools/objects/grab_points/grab_point_hand_left.tscn" id="2_b3j7x"]
[ext_resource type="Animation" uid="uid://dgfeikrugfewi" path="res://addons/godot-xr-tools/hands/animations/left/Cup.res" id="3_v0rjv"]
[ext_resource type="Script" uid="uid://bmclcwctwu3gd" path="res://addons/godot-xr-tools/hands/poses/hand_pose_settings.gd" id="4_rm7to"]
[ext_resource type="PackedScene" uid="uid://ctw7nbntd5pcj" path="res://addons/godot-xr-tools/objects/grab_points/grab_point_hand_right.tscn" id="5_addqd"]
[ext_resource type="Animation" uid="uid://do01jton6rk42" path="res://addons/godot-xr-tools/hands/animations/right/Cup.res" id="6_41pqm"]
[ext_resource type="Script" uid="uid://dq86gvhe6d20d" path="res://addons/ateneo-virtual-reality-escape/inventory-system/inventory_item.gd" id="7_2ui1f"]
[ext_resource type="PackedScene" uid="uid://bqletfsp5462q" path="res://src/Assets/kitchen-assets/glb/salt.glb" id="8_b76sw"]
[ext_resource type="Material" uid="uid://cea5ls8815brl" path="res://src/Assets/kitchen-assets/glb/salt_effect.tres" id="9_0igua"]
[ext_resource type="Texture2D" uid="uid://febxpfbrlrie" path="res://src/Assets/00-general-3d-assets/Flare00.PNG" id="10_xxxgr"]
[ext_resource type="Script" uid="uid://cg1lorgur84yy" path="res://addons/ateneo-virtual-reality-escape/object-interaction-system/ois-actor/ois_actor_component.gd" id="11_b1k3q"]
[ext_resource type="Script" uid="uid://cgettxdui2mmi" path="res://addons/ateneo-virtual-reality-escape/object-interaction-system/ois-state-machine/ois_one_hand_tool_asm.gd" id="12_xcvj4"]
[ext_resource type="Script" uid="uid://b4ao0gdf7khuq" path="res://addons/ateneo-virtual-reality-escape/object-interaction-system/ois-colliders/ois_collider_area3d.gd" id="13_kyq2h"]
[ext_resource type="PackedScene" uid="uid://c1pv5eyb3pnow" path="res://src/Assets/00-general-3d-assets/grab_particle.tscn" id="14_xcvj4"]

[sub_resource type="BoxShape3D" id="BoxShape3D_tndqt"]
size = Vector3(0.0699092, 0.205753, 0.0583725)

[sub_resource type="Resource" id="Resource_mv4es"]
script = ExtResource("4_rm7to")
open_pose = ExtResource("3_v0rjv")
closed_pose = ExtResource("3_v0rjv")

[sub_resource type="Resource" id="Resource_qnege"]
script = ExtResource("4_rm7to")
open_pose = ExtResource("6_41pqm")
closed_pose = ExtResource("6_41pqm")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kyq2h"]
transparency = 1
blend_mode = 1
cull_mode = 2
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("10_xxxgr")
uv1_scale = Vector3(1.015, 1.01, 13.465)
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_xxxgr"]
material = SubResource("StandardMaterial3D_kyq2h")

[sub_resource type="SphereShape3D" id="SphereShape3D_4khyg"]
radius = 0.0666457

[node name="Salt" type="RigidBody3D"]
collision_layer = 4
collision_mask = 196615
freeze_mode = 1
script = ExtResource("1_0igua")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00590652, 0.033472, 0.00069991)
shape = SubResource("BoxShape3D_tndqt")

[node name="GrabPointHandLeft" parent="." instance=ExtResource("2_b3j7x")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0251323, 0.0363569, -0.0630695)
hand_pose = SubResource("Resource_mv4es")

[node name="GrabPointHandRight" parent="." instance=ExtResource("5_addqd")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0191619, 0.0356365, -0.0644259)
hand_pose = SubResource("Resource_qnege")

[node name="InventoryItem" type="Node3D" parent="." node_paths=PackedStringArray("defined_mesh", "defined_collision_shape")]
script = ExtResource("7_2ui1f")
unique = true
defined_mesh = NodePath("../salt")
defined_collision_shape = NodePath("../CollisionShape3D")
preferred_scale = 0.4

[node name="salt" parent="." instance=ExtResource("8_b76sw")]
transform = Transform3D(0.04, 0, 0, 0, 0.04, 0, 0, 0, 0.04, -0.00458045, 0.0379031, 0.000738561)

[node name="SaltParticle" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00345506, 0.142611, 0)
emitting = false
amount = 40
preprocess = 1.0
visibility_aabb = AABB(-0.5, -0.5, -0.5, 1, 1, 1)
process_material = ExtResource("9_0igua")
draw_pass_1 = SubResource("QuadMesh_xxxgr")

[node name="OISActorComponent" type="Node3D" parent="."]
script = ExtResource("11_b1k3q")
receiver_group = "salt"
metadata/_custom_type_script = "uid://cg1lorgur84yy"

[node name="OISOneHandToolASM" type="Node3D" parent="OISActorComponent"]
script = ExtResource("12_xcvj4")
metadata/_custom_type_script = "uid://cgettxdui2mmi"

[node name="OISColliderArea3D" type="Node3D" parent="OISActorComponent"]
script = ExtResource("13_kyq2h")
metadata/_custom_type_script = "uid://b4ao0gdf7khuq"

[node name="Area3D" type="Area3D" parent="OISActorComponent/OISColliderArea3D"]
collision_layer = 536870912
collision_mask = 536870912

[node name="CollisionShape3D" type="CollisionShape3D" parent="OISActorComponent/OISColliderArea3D/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000298117, 0.149486, 0.00567205)
shape = SubResource("SphereShape3D_4khyg")

[node name="GrabParticle" parent="." instance=ExtResource("14_xcvj4")]

[connection signal="grabbed" from="." to="." method="_on_grabbed"]
[connection signal="grabbed" from="." to="GrabParticle" method="_on_first_grab"]
[connection signal="released" from="." to="." method="_on_released"]
